--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "0.460.0",
-    "framer-motion": "11.11.17",
-    "@google/genai": "1.3.0"
+    "@google/genai": "^1.34.0",
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.561.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
